<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item android:id="@+id/id_homepage_fragment"
            android:icon="@drawable/homescreen"
            android:title="@string/home"
            android:padding ="10dp"/>

        <item android:id="@+id/id_exercise_fragment"
            android:icon="@drawable/y1"
            android:title="@string/exercice"
            android:padding ="10dp"/>

        <item android:id="@+id/id_statistics_fragment"
            android:icon="@drawable/pie_chart"
            android:title="@string/statistics"
            android:padding ="10dp"/>

        <item android:id="@+id/id_profile_fragment"
            android:icon="@drawable/profile"
            android:title="@string/profile"
            android:padding ="10dp"/>

    </group>
    <item android:title="@string/information">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/settings"
                    android:icon="@drawable/setting"
                    android:title="@string/settings"/>

                <item android:id="@+id/connect"
                    android:icon="@drawable/contact"
                    android:title="@string/reach_us"/>

            </group>
        </menu>
    </item>

</menu>