<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/homescreen"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/exercise_fragment"
        android:icon="@drawable/yog"
        android:title="@string/exercice"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/statistics_fragment"
        android:icon="@drawable/pie_chart"
        android:title="@string/statistics"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile_fragment"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:showAsAction="always" />

</menu>