<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Breath.BreathFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/robotoslabmedium"
                android:text="@string/breath_style"
                android:textColor="@color/teal_700"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:padding="15dp"
                android:text="@string/howto_breath"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/robotoslabmedium"
            android:text="@string/breath_technices"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


        <!-- 1 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/robotoslabextrabold"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />



        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="208dp"
            android:text="@string/diyafram_title"
            android:textColor="@color/blue_gray_light"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/diyaframDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="3dp"
            android:text="@string/diyafram_desc"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <!-- 2 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/robotoslabextrabold"
            android:text="2"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:text="@string/four_breath"
            android:textColor="@color/blue_gray_light"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diyaframDesc" />

        <TextView
            android:id="@+id/fourBreath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:paddingEnd="5dp"
            android:text="@string/fourbreath_desc"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <!-- 3 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/robotoslabextrabold"
            android:text="3"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="208dp"
            android:text="@string/counting_breath"
            android:textColor="@color/blue_gray_light"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourBreath" />

        <TextView
            android:id="@+id/spellBreath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:text="@string/countingbreath_desc"
            android:textSize="15sp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <!-- 4 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/robotoslabextrabold"
            android:text="4"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="208dp"
            android:text="@string/focus_breath"
            android:textColor="@color/blue_gray_light"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spellBreath" />

        <TextView
            android:id="@+id/nazarBreath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="5dp"
            android:layout_marginTop="3dp"
            android:text="@string/focus_breath_desc"
            android:textSize="15sp"
            android:layout_marginStart="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <!-- 5 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/robotoslabextrabold"
            android:text="5"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="208dp"
            android:text="@string/closed_breath"
            android:textColor="@color/blue_gray_light"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nazarBreath" />

        <TextView
            android:id="@+id/closedNoseBreath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:paddingEnd="5dp"
            android:text="@string/closed_breath_desc"
            android:textSize="15sp"
            android:layout_marginStart="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


        <!-- 6 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/robotoslabextrabold"
            android:text="6"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="208dp"
            android:text="@string/alternatv_nose_breath"
            android:textColor="@color/blue_gray_light"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/closedNoseBreath" />

        <TextView
            android:id="@+id/holdBreath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:paddingEnd="5dp"
            android:text="@string/alternativ_breath_desc"
            android:textSize="15sp"
            android:layout_marginStart="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />


        <!-- 7 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/robotoslabextrabold"
            android:text="7"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="208dp"
            android:text="@string/seyir_breath"
            android:textColor="@color/blue_gray_light"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/holdBreath" />

        <TextView
            android:id="@+id/medidationBreath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:text="@string/alternativ_breath_desc"
            android:textSize="15sp"
            android:layout_marginStart="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />


        <!-- 8 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/robotoslabextrabold"
            android:text="8"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="208dp"
            android:text="@string/medidation_breath"
            android:textColor="@color/blue_gray_light"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medidationBreath" />

        <TextView
            android:id="@+id/lastreath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:text="@string/mediationbreath_desc"
            android:textSize="15sp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="sadfjahsdghasdgajskd"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/lastreath"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>