<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/teal_200"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/skip"
        android:textSize="20sp"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="250dp"
        android:background="@drawable/view_pager_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:background="@drawable/quarter_circle_background_right"
        android:paddingEnd="20dp"
        android:text="@string/forward"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:background="@drawable/quarter_circle_background_left"
        android:paddingStart="20dp"
        android:text="@string/back"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>